	* il_wdp.c: Redid all of the code so that it actually works now.
	* il_internal.h:42-46: Added lines to define IL_NO_WDP if not in Windows.
	* il_io.c: Added Iwi and Fits loading calls.
	* il.h: Added IL_BLP and IL_DICOM.  Switched IL_DICOM and IL_IWI defines.
	* il_internal.h: Added Blp and Dicom function defines.
	* il_blp.c: Added this file and started code.

2009-02-09 Matěj Týč <bubla@users.sf.net>
	* tests/testil.c: Added checks what IL loading/saving routines ended
	* build system: Removed --enable-monolithic option.

2009-02-07/08 Denton Woods <doomwiz@users.sf.net>
	* il_iwi.c: Added this file and code to load .iwi files.
	* il_vtf.c (iLoadVtfInternal): Added checks for CompData == NULL.
	* il_dds.c/il_dds.h: Changed CompFormat to a local variable.  Renamed Decompress to DdsDecompress.
	* ChangeLog (this file): Changed order to newest at the top.
	* il.h: Added IL_FITS and IL_IWI defines.
	* config.h.win: Added IL_FITS, IL_IWI, IL_SUN and IL_TPL.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_fits.c and il_iwi.c to source line.


--- 1.7.7 release ---

2009-02-06 Matěj Týč <bubla@users.sf.net>
	* configure.ac, lib/Makefile.am: Added explicit linking with libm
	library + fixed the ilut_x11.c file conditions of compilation
	* examples/Makefile.am + IL examples, test/Makefile.am + testil: Added
	conditional compilation option when compiling only with IL (without
	ILU, iluErrorString() absence workaround)

2009-02-06 Denton Woods <doomwiz@users.sf.net>
	* README.win and README.unix: Updated with Cygwin/MinGW instructions.

2009-02-05 Denton Woods <doomwiz@users.sf.net>
	* il_tga.c: Fixed bug loading malformed RLE Targa images.
	* il_rle.c:20: Changed size_t cast to ILint to resolve compiler warning.
	* il.def: Added definitions.
	* Updated version numbers to 1.7.7 everywhere.

2009-02-04 Denton Woods <doomwiz@users.sf.net>
	* ilut_opengl.c:160: Changed checks to see if less than 0.
	* il_fits.c: Got this reading FITS files properly.
